--- a/tasks.json
+++ b/tasks.json
@@ -5,5 +5,12 @@
         "description": "test",
         "completed": true,
         "created_at": "2025-03-10 16:21:57"
+    },
+    {
+        "id": 2,
+        "title": "test2",
+        "description": "test2",
+        "completed": true,
+        "created_at": "2025-03-10 16:56:44"
     }
 ]
